--- a/config/database.yml
+++ b/config/database.yml
@@ -55,4 +55,5 @@ production:
   password: <%= ENV['VOICELIFE_DATABASE_PASSWORD'] %>
   host: <%= ENV['VOICELIFE_DATABASE_HOSTNAME'] %>
   port: <%= ENV['VOICELIFE_DATABASE_PORT'] %>
+  socket: /var/lib/mysql/mysql.sock
 
