--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,7 @@ test:
 #
 production:
   <<: *default
+  charset: utf8
   database: <%= ENV['VOICELIFE_DATABASE_NAME'] %>
   username: <%= ENV['VOICELIFE_DATABASE_USERNAME'] %>
   password: <%= ENV['VOICELIFE_DATABASE_PASSWORD'] %>
