--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react_ujs": "^2.6.2",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react_ujs": "^2.6.2",
     "swiper": "^8.3.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
