--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react_ujs": "^2.6.2",
     "swiper": "^8.3.2",
     "turbolinks": "^5.2.0",
+    "vue": "^3.2.45",
+    "vue-loader": "^17.0.1",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
